<resources>
    <string name="app_name">Playlist maker</string>
    <string name="searching">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="black_theme">Тёмная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="write_to_support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="link_on_app">https://practicum.yandex.ru/android-developer/?from=catalog</string>
    <string name="support_email">ppr51@yandex.ru</string>
    <string name="support_email_theme">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_email_body">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="user_agreement_link">https://yandex.ru/legal/practicum_offer/</string>
    <string name="search_hint">Поиск</string>
    <string name="search_nothing_found">Ничего не нашлось</string>
    <string name="search_network_problem">Проблемы со связью</string>
    <string name="search_need_check_network">Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="search_update">Обновить</string>
    <string name="you_have_searched">Вы это искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="country">Страна</string>
    <string name="genre">Жанр</string>
    <string name="year">Год</string>
    <string name="album">Альбом</string>
    <string name="track_length">Длительность</string>
</resources>