<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:theme="@style/Base.Theme.PlaylistMaker.MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:paddingStart="16dp"
        android:paddingTop="14dp"
        android:paddingBottom="16dp"
        android:text="@string/app_name"
        android:textColor="@color/yp_white"
        android:textSize="@dimen/text_22sp"
        android:fontFamily="@font/ys_display_medium"
        android:textFontWeight="500" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/main_layout_height"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/radius_button_corners"
        android:paddingTop="24dp"
        android:paddingBottom="28dp">

        <Button style="@style/MainActivityButtonStyle"
            android:id="@+id/search_button"
            android:text="@string/searching"
            app:icon="@drawable/vector_search_icon" />

        <Button style="@style/MainActivityButtonStyle"
            android:id="@+id/media_button"
            android:text="@string/media"
            app:icon="@drawable/vector_media_icon" />

        <Button style="@style/MainActivityButtonStyle"
            android:id="@+id/settings_button"
            android:text="@string/settings"
            app:icon="@drawable/vector_settings_icon" />
    </LinearLayout>
</LinearLayout>

