<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <!-- Заголовок -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="56dp">

        <Button
            android:id="@+id/back_from_settings_to_main_button"
            android:layout_width="28dp"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:backgroundTint="@color/white"
            android:gravity="center_vertical"
            app:icon="@drawable/vector_back_arrow"
            app:iconGravity="textStart"
            app:iconPadding="0dp"
            app:iconTint="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:layout_marginStart="64dp"
            android:gravity="center_vertical"
            android:text="@string/settings"
            android:textColor="@color/black"
            android:textSize="@dimen/text_22sp"
            android:textStyle="bold" />
    </FrameLayout>

<!--    Вертикальный отступ-->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="24dp" />

<!--    Тёмная тема-->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_item_height">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:layout_marginStart="16dp"
            android:gravity="center_vertical"
            android:text="@string/black_theme"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <Switch
            android:id="@+id/switch1"
            android:layout_width="56dp"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:layout_marginEnd="24dp"
            />
    </FrameLayout>

<!--    Поделиться приложением-->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_item_height">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:layout_marginStart="16dp"
            android:gravity="center_vertical"
            android:text="@string/share_app"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <Button
            android:layout_width="35dp"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:layout_marginEnd="24dp"
            android:backgroundTint="@color/white"
            android:gravity="center_vertical"
            android:outlineSpotShadowColor="@color/white"
            app:icon="@drawable/vector_share_app"
            app:iconGravity="textStart"
            app:iconPadding="0dp"
            app:iconTint="#AEAFB4" />
    </FrameLayout>

<!--    Написать в поддержку-->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_item_height">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:layout_marginStart="16dp"
            android:gravity="center_vertical"
            android:text="@string/write_to_support"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <Button
            android:layout_width="35dp"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:layout_marginEnd="24dp"
            android:backgroundTint="@color/white"
            android:gravity="center_vertical"
            android:outlineSpotShadowColor="@color/white"
            app:icon="@drawable/vector_support"
            app:iconGravity="textStart"
            app:iconPadding="0dp"
            app:iconTint="#AEAFB4" />
    </FrameLayout>

<!--    Пользовательское соглашение-->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_item_height">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:layout_marginStart="16dp"
            android:gravity="center_vertical"
            android:text="@string/therms_of_use"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <Button
            android:layout_width="35dp"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:layout_marginEnd="24dp"
            android:backgroundTint="@color/white"
            android:gravity="center_vertical"
            android:outlineSpotShadowColor="@color/white"
            app:icon="@drawable/vector_right_arrow"
            app:iconGravity="textStart"
            app:iconPadding="0dp"
            app:iconTint="#AEAFB4" />
    </FrameLayout>

</LinearLayout>